refactor: reorganize test infrastructure and untrack local files
- Move integration tests from nsecbunker-it to nsecbunker-tests/nsecbunker-it
- Add nsecbunker-perf module with JMH benchmarks for crypto, serialization, relay pool
- Add E2E test infrastructure with SharedContainers for Testcontainers reuse
- Add security tests for input validation and transport layer
- Fix BatchSigningE2ETest timeout by using local token validation (validate_token not implemented in nsecbunkerd)
- Add client transport abstraction layer
- Untrack local-only files (AGENTS.md, CLAUDE.md, project/) from repository

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>